--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -197,7 +197,7 @@
     <div class="accordion">
       <div class="card is-active">
         <a class="card__title is-active" data-toggle="collapse" href="#content5">
-          Sëmundjet Kardiovaskulare
+          Osteoporoza
           <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
           </svg>
@@ -208,13 +208,13 @@
             <div class="container">
               <div class="box">
                 <h3>Regjimi ushqimor</h3>
-                <p>Ushqime të pasura me antioksidantë si frutat dhe perimet, 
-                  peshk i yndyrshëm të shëndetshëm, vajra të mirë si vaj ulliri.</p>
+                <p> Ushqimi i pasur ne kalcium si qumesht, kos, 
+                  djathe, arra, laktoza, dhe perime te gjelbra.</p>
               </div>
               <div class="box">
                 <span>🚶‍♀️</span>
                 <h3>Aktiviteti fizik</h3>
-                <p>Aktivitete aerobike si ecja, vrapimi, ose ciklizmi, për rreth 150-300 minuta në javë.</p>
+                <p>Ushtrimet qe forcojne muskujt dhe kockat si ecja, ngritja e peshave, dhe yoga.</p>
               </div>
               <div class="box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -222,8 +222,8 @@
                   <path d="M0 0h24v24H0z" fill="none"/>
                 </svg>
                 <h3>Këshilla te përgjithshme</h3>
-                <p> Kufizimi i konsumit të yndyrës së keqe, ndjekja e një stili jetese aktive, 
-                  dhe heqja dorë nga duhani janë të gjitha mënyra për të mbrojtur zemrën tuaj.</p>
+                <p> Sigurohuni te merrni mjaftueshem kalcium dhe vitaminë D,
+                   shmangni duhanin dhe konsumin e alkolit, dhe praktikoni aktivitet fizik rregullisht.</p>
               </div>
             </div>
           </div>
@@ -237,7 +237,7 @@
   <div class="accordion">
     <div class="card is-active">
       <a class="card__title is-active" data-toggle="collapse" href="#content6">
-        Sëmundjet Kardiovaskulare
+        Astmë
         <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
         </svg>
@@ -248,13 +248,13 @@
           <div class="container">
             <div class="box">
               <h3>Regjimi ushqimor</h3>
-              <p>Ushqime të pasura me antioksidantë si frutat dhe perimet, 
-                peshk i yndyrshëm të shëndetshëm, vajra të mirë si vaj ulliri.</p>
+              <p>Frutat, perimet, peshku, arra, dhe ushqime te pasura 
+                me antioksidante si qepa, hudhra, dhe gjysme.</p>
             </div>
             <div class="box">
               <span>🚶‍♀️</span>
               <h3>Aktiviteti fizik</h3>
-              <p>Aktivitete aerobike si ecja, vrapimi, ose ciklizmi, për rreth 150-300 minuta në javë.</p>
+              <p> Ushtrimet e frymemarrjes si yoga dhe meditimi, dhe aktivitete te ndryshme te shtrire.</p>
             </div>
             <div class="box">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -262,8 +262,8 @@
                 <path d="M0 0h24v24H0z" fill="none"/>
               </svg>
               <h3>Këshilla te përgjithshme</h3>
-              <p> Kufizimi i konsumit të yndyrës së keqe, ndjekja e një stili jetese aktive, 
-                dhe heqja dorë nga duhani janë të gjitha mënyra për të mbrojtur zemrën tuaj.</p>
+              <p> Mbrojeni veten nga alergjenet dhe ndotësit ambientalë, kontrolloni rregullisht simptomat, 
+                dhe konsultohuni me mjekun per trajtimin dhe menaxhimin e astmes.</p>
             </div>
           </div>
         </div>
@@ -277,7 +277,7 @@
     <div class="accordion">
       <div class="card is-active">
         <a class="card__title is-active" data-toggle="collapse" href="#content7">
-          Sëmundjet Kardiovaskulare
+          Artroza
           <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
           </svg>
@@ -288,13 +288,14 @@
             <div class="container">
               <div class="box">
                 <h3>Regjimi ushqimor</h3>
-                <p>Ushqime të pasura me antioksidantë si frutat dhe perimet, 
-                  peshk i yndyrshëm të shëndetshëm, vajra të mirë si vaj ulliri.</p>
+                <p>Ushqimi i pasur me acid hialurik si gjeli i pulës, gjeli i pecetave,
+                   peshku i yndyrshëm, dhe kerpudha.</p>
               </div>
               <div class="box">
                 <span>🚶‍♀️</span>
                 <h3>Aktiviteti fizik</h3>
-                <p>Aktivitete aerobike si ecja, vrapimi, ose ciklizmi, për rreth 150-300 minuta në javë.</p>
+                <p>Ushtrimet e rregullta qe forcojne muskujt dhe i rritin fleksibilitetin si pilatesi,
+                   yoga dhe ushtrimet me pesha te lehta.</p>
               </div>
               <div class="box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -302,8 +303,8 @@
                   <path d="M0 0h24v24H0z" fill="none"/>
                 </svg>
                 <h3>Këshilla te përgjithshme</h3>
-                <p> Kufizimi i konsumit të yndyrës së keqe, ndjekja e një stili jetese aktive, 
-                  dhe heqja dorë nga duhani janë të gjitha mënyra për të mbrojtur zemrën tuaj.</p>
+                <p> Mbyllni mbajtjen e peshes dhe rregulloni dieten tuaj ne 
+                  menyre qe te permbajne ushqime te pasura me acid hialurik dhe anti-inflamatore.</p>
               </div>
             </div>
           </div>
@@ -316,7 +317,7 @@
   <div class="accordion">
     <div class="card is-active">
       <a class="card__title is-active" data-toggle="collapse" href="#content8">
-        Sëmundjet Kardiovaskulare
+        Stresi
         <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
         </svg>
@@ -327,13 +328,13 @@
           <div class="container">
             <div class="box">
               <h3>Regjimi ushqimor</h3>
-              <p>Ushqime të pasura me antioksidantë si frutat dhe perimet, 
-                peshk i yndyrshëm të shëndetshëm, vajra të mirë si vaj ulliri.</p>
+              <p>Ushqimi i pasur me magnez dhe acid folik si arrat, 
+                bajamet, avokadot, dhe bananet.</p>
             </div>
             <div class="box">
               <span>🚶‍♀️</span>
               <h3>Aktiviteti fizik</h3>
-              <p>Aktivitete aerobike si ecja, vrapimi, ose ciklizmi, për rreth 150-300 minuta në javë.</p>
+              <p>Ushtrimet e rregullta te relaksimit si yoga, meditimi, dhe ecja e ngadaltë.</p>
             </div>
             <div class="box">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -341,8 +342,9 @@
                 <path d="M0 0h24v24H0z" fill="none"/>
               </svg>
               <h3>Këshilla te përgjithshme</h3>
-              <p> Kufizimi i konsumit të yndyrës së keqe, ndjekja e një stili jetese aktive, 
-                dhe heqja dorë nga duhani janë të gjitha mënyra për të mbrojtur zemrën tuaj.</p>
+              <p> Kujdesuni për orarin tuaj të gjumit, 
+                bëni ushtrime të rregullta të frymëmarrjes, 
+                dhe kufizoni konsumin e kafeinës dhe alkoolit.</p>
             </div>
           </div>
         </div>
@@ -355,7 +357,7 @@
     <div class="accordion">
       <div class="card is-active">
         <a class="card__title is-active" data-toggle="collapse" href="#content9">
-          Sëmundjet Kardiovaskulare
+          Osteoartriti
           <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
           </svg>
@@ -366,13 +368,15 @@
             <div class="container">
               <div class="box">
                 <h3>Regjimi ushqimor</h3>
-                <p>Ushqime të pasura me antioksidantë si frutat dhe perimet, 
-                  peshk i yndyrshëm të shëndetshëm, vajra të mirë si vaj ulliri.</p>
+                <p> Ushqimi i pasur me acide yndyrore të shëndetshme si peshku, avokado, dhe vaj ulliri. 
+                  Konsumoni edhe ushqime me kalcium për shëndetin e kockave.</p>
               </div>
               <div class="box">
                 <span>🚶‍♀️</span>
                 <h3>Aktiviteti fizik</h3>
-                <p>Aktivitete aerobike si ecja, vrapimi, ose ciklizmi, për rreth 150-300 minuta në javë.</p>
+                <p> Ushtrimet e ulëta impakti si noti, 
+                  ecja e ngadaltë, dhe yoga për 
+                  të forcuar muskujt dhe të mbajtur fleksibilitetin.</p>
               </div>
               <div class="box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -380,8 +384,9 @@
                   <path d="M0 0h24v24H0z" fill="none"/>
                 </svg>
                 <h3>Këshilla te përgjithshme</h3>
-                <p> Kufizimi i konsumit të yndyrës së keqe, ndjekja e një stili jetese aktive, 
-                  dhe heqja dorë nga duhani janë të gjitha mënyra për të mbrojtur zemrën tuaj.</p>
+                <p> Mbroni nyjet duke përdorur teknika të rregullta të përvëlimi dhe ngrohjeje, 
+                  mbani një peshë të shëndetshme,
+                   dhe konsultohuni me një specialist për trajtimin e përshtatshëm.</p>
               </div>
             </div>
           </div>
@@ -395,7 +400,7 @@
   <div class="accordion">
     <div class="card is-active">
       <a class="card__title is-active" data-toggle="collapse" href="#content10">
-        Sëmundjet Kardiovaskulare
+        Anoreksia
         <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
         </svg>
@@ -406,13 +411,16 @@
           <div class="container">
             <div class="box">
               <h3>Regjimi ushqimor</h3>
-              <p>Ushqime të pasura me antioksidantë si frutat dhe perimet, 
-                peshk i yndyrshëm të shëndetshëm, vajra të mirë si vaj ulliri.</p>
+              <p>Përfshini ushqime të pasura me nutrientë në dietën tuaj, 
+                duke përfshirë fruta, perime, proteina, 
+                karbohidrate të komplikuara dhe yndyrna të shëndetshme.
+                Shmangni dietat ekstreme ose mungesën e ushqimeve,
+                 dhe përqëndrohuni në një konsum të shëndetshëm të ushqimeve të freskëta dhe tërësore.</p>
             </div>
             <div class="box">
               <span>🚶‍♀️</span>
               <h3>Aktiviteti fizik</h3>
-              <p>Aktivitete aerobike si ecja, vrapimi, ose ciklizmi, për rreth 150-300 minuta në javë.</p>
+              <p>Mund të përfshijnë shëtitje të shkurtra, joga, plazh, ose aktivitete tjera të qetë.</p>
             </div>
             <div class="box">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -420,8 +428,8 @@
                 <path d="M0 0h24v24H0z" fill="none"/>
               </svg>
               <h3>Këshilla te përgjithshme</h3>
-              <p> Kufizimi i konsumit të yndyrës së keqe, ndjekja e një stili jetese aktive, 
-                dhe heqja dorë nga duhani janë të gjitha mënyra për të mbrojtur zemrën tuaj.</p>
+              <p>  Mësoni të njihni shenjat e lodhjes së tepërt, urisë dhe stresit, 
+                dhe mbrojtuni veten nga situatat që mund të përkeqësojnë anoreksinë.</p>
             </div>
           </div>
         </div>
