--- a/homePage/index.html
+++ b/homePage/index.html
@@ -14,7 +14,17 @@
     <ul id="navcontent">
         <li><a href="index.html">Home</a></li>
         <li><a href="../aboutAs/aboutAs.html">About</a></li>
-        <li><a href="#">Menu</a></li>
+        <li class="dropdown">
+            <a href="#">Menu</a>
+            <div class="dropdown-content">
+                <!-- Elementet e dropdown menu për 'Menu' -->
+                <a href="#">Item 1</a>
+                <a href="#">Item 2</a>
+                <a href="#">Item 3</a>
+                <a href="#">Item 4</a>
+                <a href="#">Item 5</a>
+            </div>
+        </li>
         <li><a href="../contact/contact.html">Contact Us</a></li>
     </ul>
     <a class="btn1" href="../logIn/logIIn.html">Log In</a>
