--- a/aboutAs/aboutAs.html
+++ b/aboutAs/aboutAs.html
@@ -41,7 +41,7 @@
 </header>
 <section>
     <div class="card">
-        <img src="">
+        <img src="megi.jpeg">
         <h2>Megi Grenazi</h2>
     </div>
     <div class="card">
@@ -49,12 +49,12 @@
         <h2>Grasjela Celaj</h2>
     </div>
     <div class="card">
-        <img src="">
+        <img src="kisi.jpeg">
         <h2>Kismete Guri</h2>
     </div>
     <div class="card">
-        <img src="">
-        <h2>Elda Halilaj</h2>
+        <img src="elda.jpeg">
+        <h2>Elda Halili</h2>
     </div>
     <div class="card">
         <img src="">
