--- a/homePage/index.html
+++ b/homePage/index.html
@@ -30,8 +30,12 @@
     <a class="btn1" href="../logIn/logIIn.html">Log In</a>
 </nav>
 <header>
-    <h1 id="top">Nutrition & Catering</h1>
-    <h1 id="top1">Welcome to DietShop, your one-stop destination for all your nutrition and catering needs.</h1>
+        <div class="text-container">
+            <div class="background-image">
+            <h1 id="top">Nutrition & Catering</h1>
+            <h1 id="top1">Welcome to DietShop, your one-stop destination for all your nutrition and catering needs.</h1>
+        </div>
+        </div>
 </header>
 <hr>
 <div id="row1">
@@ -63,9 +67,11 @@
             <button class="btn">View More</button>
         </div>
     </div>
-</section>
-<hr>
 
+</section>
+<header>
+    <h1 id="to">Abonime</h1>
+</header>
 <div class="abonohuuuu">
     <div class="container-fluid">
         <div class="row justify-content-center">
