--- a/homePage/index.html
+++ b/homePage/index.html
@@ -30,8 +30,12 @@
     <a class="btn1" href="../logIn/logIIn.html">Log In</a>
 </nav>
 <header>
-    <h1 id="top">Nutrition & Catering</h1>
-    <h1 id="top1">Welcome to DietShop, your one-stop destination for all your nutrition and catering needs.</h1>
+    <div class="text-container">
+        <div class="background-image">
+            <h1 id="top">Nutrition & Catering</h1>
+            <h1 id="top1">Welcome to DietShop, your one-stop destination for all your nutrition and catering needs.</h1>
+        </div>
+    </div>
 </header>
 <hr>
 <div id="row1">
@@ -42,7 +46,8 @@
         <div class="container container--1">
             <h2>Nutrition Plan</h2>
             <p>Get personalized nutrition plans tailored to your dietary needs. Click the button below to view more.</p>
-            <button class="btn" id="viewMoreBtn" >View More</button>
+            <button class="btn" id="viewMoreBtn">View More</button>
+
         </div>
     </div>
 
@@ -60,12 +65,14 @@
             <h2>Catering Plan</h2>
             <p>Enjoy weekly catering services delivering delicious and nutritious meals to your doorstep. Click the
                 button below to view more.</p>
-            <button class="btn">View More</button>
+            <button class="btn" href="file:///C:/Users/DELL/Desktop/website/WEB-1/semundjet/1.html">View More</button>
         </div>
     </div>
-</section>
-<hr>
 
+</section>
+<header>
+    <h1 id="to">Abonime</h1>
+</header>
 <div class="abonohuuuu">
     <div class="container-fluid">
         <div class="row justify-content-center">
@@ -223,7 +230,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
