--- a/aboutAs/aboutAs.html
+++ b/aboutAs/aboutAs.html
@@ -45,7 +45,7 @@
         <h2>Megi Grenazi</h2>
     </div>
     <div class="card">
-        <img src="">
+        <img src="grasjela.jpeg">
         <h2>Grasjela Celaj</h2>
     </div>
     <div class="card">
@@ -57,7 +57,7 @@
         <h2>Elda Halili</h2>
     </div>
     <div class="card">
-        <img src="">
+        <img src="arbri.jpeg">
         <h2>Arber Allko</h2>
     </div>
 </section>
