--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -24,6 +24,7 @@
   <!-- Your HTML content goes here -->
   <section class="section_accordion">
     <h1>Dieta ne baze te semundjeve</h1> <!--<br><small>Cfare duhet te bejme dhe cfare jo?</small> -->
+  </section>
 <!-- e para-->
     <section class="section_accordion">
       <div class="accordion">
@@ -446,6 +447,7 @@
     </div>
   </div>
 </section>
+
   <script src="js.js"></script>
 </body>
 <footer>
