--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -448,6 +448,23 @@
 
   <script src="js.js"></script>
 </body>
-<footer>
+<footer class="detailed-footer">
+  <div class="footer-info">
+      <h3>Contact Information</h3>
+      <p>Email: info@dietshop.com</p>
+      <p>Phone: +1 (555) 123-4567</p>
+      <p>Address: 123 Main Street, City, Country</p>
+  </div>
+  <div class="footer-social">
+      <h3>Follow Us</h3>
+      <ul>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Instagram</a></li>
+      </ul>
+  </div>
+  <div class="footer-bottom">
+      <p>&copy; 2024 DietShop. All Rights Reserved.</p>
+  </div>
 </footer>
 </html>
