--- a/logIn/logIIn.html
+++ b/logIn/logIIn.html
@@ -2,34 +2,58 @@
 <html>
 <head>
     <title>Slide Navbar</title>
-    <link rel="stylesheet" type="text/css" href="logIN.css">
+    <link rel="stylesheet" type="text/css" href="foto.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="main">
     <input type="checkbox" id="chk" aria-hidden="true">
 
-    <div class="Sign in">
-
+    <div class="Sign up">
         <form>
-            <label for="chk" aria-hidden="true">Sign In</label>
+            <label for="chk" aria-hidden="true">Sign Up</label>
             <input type="text" name="txt" placeholder="User name" required="">
             <input type="email" name="email" placeholder="Email" required="">
             <input type="password" name="pswd" placeholder="Password" required="">
-            <button>Sign in</button>
-
+            <button>Sign up</button>
         </form>
     </div>
 
     <div class="login">
         <form>
-            <label for="chk" aria-hidden="true">LogIn</label>
+            <label for="chk" aria-hidden="true">Login</label>
             <input type="email" name="email" placeholder="Email" required="">
             <input type="password" name="pswd" placeholder="Password" required="">
+            <a href="#" id="forgot-password">Forgotten Password?</a>
             <button>Login</button>
         </form>
     </div>
 </div>
+
+<!-- Modal for Forgotten Password -->
+<div id="forgotten" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Please enter the code sent to your email:</p>
+        <input type="text" placeholder="Enter code">
+        <p>Please enter the new password:</p>
+        <input type="password" id="new-password" placeholder="New password">
+        <input type="password" id="confirm-password" placeholder="Confirm new password">
+        <button id="submit">Submit </button>
+    </div>
 </div>
+
+<div id="success-modal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Your password has been changed successfully!</p>
+    </div>
+</div>
+
+
+<script src="sj.js"> </script>
+</body>
+</html>
+
 </body>
 </html>
