--- a/homePage/index.html
+++ b/homePage/index.html
@@ -43,6 +43,7 @@
             <h2>Nutrition Plan</h2>
             <p>Get personalized nutrition plans tailored to your dietary needs. Click the button below to view more.</p>
             <button class="btn" id="viewMoreBtn">View More</button>
+            
         </div>
     </div>
 
@@ -60,7 +61,7 @@
             <h2>Catering Plan</h2>
             <p>Enjoy weekly catering services delivering delicious and nutritious meals to your doorstep. Click the
                 button below to view more.</p>
-            <button class="btn">View More</button>
+                <button class="btn" href="file:///C:/Users/DELL/Desktop/website/WEB-1/semundjet/1.html">View More</button>
         </div>
     </div>
 </section>
