--- a/Nutricion/border.html
+++ b/Nutricion/border.html
@@ -39,13 +39,13 @@
     <div class="card">
         <div class="container" >
             <h4><a href="#19-40">Të Rriturit</a></h4>
-            <p>19-40</p>
+            <p>19-50</p>
         </div>
     </div>
     <div class="card">
         <div class="container">
             <h4><a href="#mosha">Mosha e Mesme dhe Mosha e Mëvonshme</a></h4>
-            <p> 40-50 dhe 50-65 </p>
+            <p> 50+ </p>
         </div>
     </div>
     <div class="card">
@@ -133,7 +133,7 @@
 
 
 <div class="day">
-    <p class="container" id="19-40">Të Rriturit (19-40 vjeç)</p>
+    <p class="container" id="19-40">Të Rriturit (19-50 vjeç)</p>
     <ul class="days" >
         <li><a href="#mosha19_40dita1" >E Hene</a></li>
         <li><a href="#mosha19_40dita2">E Marte</a></li>
@@ -198,7 +198,7 @@
 
 
 <div class="day">
-    <p class="container" id="mosha">Personat mbi 50 vjeç</p>
+    <p class="container" id="mosha">Mosha e Mesme dhe Mosha e Mëvonshme (50+) </p>
     <ul class="days" >
         <li><a href="#mosha50_plus_dita1" >E Hene</a></li>
         <li><a href="#mosha50_plus_dita2">E Marte</a></li>
