--- a/logIn/logIIn.html
+++ b/logIn/logIIn.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Slide Navbar</title>
-    <link rel="stylesheet" type="text/css" href="foto.css">
+    <link rel="stylesheet" type="text/css" href="logIN.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -51,7 +51,7 @@
 </div>
 
 
-<script src="sj.js"> </script>
+<script src="login.js"> </script>
 </body>
 </html>
 
