--- a/aboutAs/aboutAs.html
+++ b/aboutAs/aboutAs.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aboutAs.css">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="aboutAs.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="aboutAs.css">
-    <link rel="stylesheet" type="text/css" href="../common/navbar-footer.css">
+    <link href="aboutAs.css" rel="stylesheet" type="text/css">
+    <link href="../common/navbar-footer.css" rel="stylesheet" type="text/css">
 
     <title>About Us - DietShop</title>
 </head>
@@ -18,7 +18,7 @@
         <li><a href="#">Menu</a></li>
         <li><a href="../contact/contact.html">Contact Us</a></li>
     </ul>
-    <a href="../logIn/logIIn.html" class="btn1">Log In</a>
+    <a class="btn1" href="../logIn/logIIn.html">Log In</a>
 </nav>
 <div class="about-content wide">
     <h2>Our Story</h2>
@@ -72,23 +72,41 @@
                 <p class="testimonial-author">- Emily Johnson</p>
             </div>
             <div class="testimonial">
-                <p>"I highly recommend DietShop to anyone looking to improve their health and wellness.</p>
-                <p> The catering service is exceptional!"</p>
+                <p>"I highly recommend DietShop to anyone looking to improve their health and wellness.
+                    <br>The catering service is exceptional! &lt;3"</p>
                 <p class="testimonial-author">- Mark Davis</p>
             </div>
             <div class="testimonial">
                 <p>"lorem"</p>
                 <p class="testimonial-author">- Mark Davis</p>
             </div>
+            <div class="testimonial">
+                <p>"lorem"</p>
+                <p class="testimonial-author">- grasjelaaa Davis</p>
+            </div>
+            <div class="testimonial">
+                <p>"lorem"</p>
+                <p class="testimonial-author">- megiii Davis</p>
+            </div>
+            <div class="testimonial">
+                <p>"lorem"</p>
+                <p class="testimonial-author">- kisiiiiiii Davis</p>
+            </div>
+            <div class="testimonial">
+                <p>"lorem"</p>
+                <p class="testimonial-author">- eldaaa Davis</p>
+            </div>
             <!-- Add more testimonials here -->
         </div>
-        <div class="carousel-buttons">
-            <button id="prevBtn" onclick="moveTestimonials(-1)">&lt;</button>
-            <button id="nextBtn" onclick="moveTestimonials(1)">&gt;</button>
-        </div>
+        <!--        <div class="carousel-buttons">-->
+        <!--            <button id="prevBtn" onclick="moveTestimonials(-)">&lt;</button>-->
+        <!--            <button id="nextBtn" onclick="moveTestimonials(1)">&gt;</button>-->
+        <!--        </div>-->
     </div>
 </div>
+
 <hr>
+
 <footer class="detailed-footer">
     <div class="footer-info">
         <h3>Contact Information</h3>
