--- a/homePage/index.html
+++ b/homePage/index.html
@@ -56,7 +56,8 @@
             <h2>Diet Plan</h2>
             <p>Receive custom diet plans designed to help you achieve your fitness goals. Click the button below to view
                 more.</p>
-            <button class="btn" id="dietPlans">View More</button>
+            <button class="btn" id="dietPlans" href="border.html">View More</button>
+            
         </div>
     </div>
 
