--- a/logIn/logIIn.html
+++ b/logIn/logIIn.html
@@ -39,17 +39,9 @@
         <p>Please enter the new password:</p>
         <input type="password" id="new-password" placeholder="New password">
         <input type="password" id="confirm-password" placeholder="Confirm new password">
-        <button id="submit">Submit </button>
+        <a href="#"><button> Submit </button>  </a>
     </div>
 </div>
-
-<div id="success-modal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>Your password has been changed successfully!</p>
-    </div>
-</div>
-
 
 <script src="login.js"> </script>
 </body>
