--- a/homePage/index.html
+++ b/homePage/index.html
@@ -18,9 +18,9 @@
             <a href="#">Menu</a>
             <div class="dropdown-content">
                 <!-- Elementet e dropdown menu për 'Menu' -->
-                <a href="#">Item 1</a>
-                <a href="#">Item 2</a>
-                <a href="#">Item 3</a>
+                <a href="../Nutricion/border.html">nutricione</a>
+                <a href="../semundjet/1.html">Semundje</a>
+                <a href="../catering/">Item 3</a>
                 <a href="#">Item 4</a>
                 <a href="#">Item 5</a>
             </div>
@@ -46,7 +46,7 @@
         <div class="container container--1">
             <h2>Nutrition Plan</h2>
             <p>Get personalized nutrition plans tailored to your dietary needs. Click the button below to view more.</p>
-            <button class="btn" id="viewMoreBtn">View More</button>
+            <button class="btn" id="viewMoreBtn1">View More</button>
 
         </div>
     </div>
@@ -56,8 +56,11 @@
             <h2>Diet Plan</h2>
             <p>Receive custom diet plans designed to help you achieve your fitness goals. Click the button below to view
                 more.</p>
-            <button class="btn" id="dietPlans" href="border.html">View More</button>
-            
+            <button class="btn" id="viewMoreBtn2">View More</button>
+            <a href="destination.html">
+                <button>Click Me!</button>
+            </a>
+
         </div>
     </div>
 
@@ -66,7 +69,7 @@
             <h2>Catering Plan</h2>
             <p>Enjoy weekly catering services delivering delicious and nutritious meals to your doorstep. Click the
                 button below to view more.</p>
-            <button class="btn" href="file:///C:/Users/DELL/Desktop/website/WEB-1/semundjet/1.html">View More</button>
+            <button class="btn" id="viewMoreBtn3">View More</button>
         </div>
     </div>
 
@@ -123,7 +126,8 @@
                                 <div class="card-body-sub">
                                     <div class="clearfix mb-3">
                                         <span class="float-start badge rounded-pill bg-success">200$</span>
-                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link" href="#">reviews</a></span>
+                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link"
+                                                                   href="#">reviews</a></span>
                                     </div>
                                     <h5 class="card-title-sub">
                                         <a href="#" target="_blank">Custom Meal Plan</a>
@@ -150,7 +154,8 @@
                                 <div class="card-body-sub">
                                     <div class="clearfix mb-3">
                                         <span class="float-start badge rounded-pill bg-success">180$</span>
-                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link" href="#">reviews</a></span>
+                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link"
+                                                                   href="#">reviews</a></span>
                                     </div>
                                     <h5 class="card-title-sub">
                                         <a href="#" target="_blank">The 30-Day Women's Transformation Stack</a>
