--- a/homePage/index.html
+++ b/homePage/index.html
@@ -57,7 +57,7 @@
             <p>Receive custom diet plans designed to help you achieve your fitness goals. Click the button below to view
                 more.</p>
             <button class="btn" id="viewMoreBtn2">View More</button>
-            
+
         </div>
     </div>
 
@@ -70,7 +70,6 @@
         </div>
     </div>
 
-</section>
 <header>
     <h1 id="to">Abonime</h1>
 </header>
@@ -78,37 +77,58 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12">
-                <div class="container-fluid-sub bg-transparent my-4 p-3" style="position: relative">
-                    <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+                <div
+                        class="container-fluid-sub bg-transparent my-4 p-3"
+                        style="position: relative"
+                >
+                    <div
+                            class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3"
+                    >
                         <div class="col hp">
                             <div class="card-sub h-100 shadow-sm">
                                 <a href="#">
-                                    <img alt="Delicious Food"
-                                         class="card-img-top-sub"
-                                         src="https://i.pinimg.com/originals/05/5f/34/055f3456e2ce5469494532fcc2b0f759.jpg"/>
+                                    <img
+                                            alt="Delicious Food"
+                                            class="card-img-top-sub"
+                                            src="https://i.pinimg.com/originals/05/5f/34/055f3456e2ce5469494532fcc2b0f759.jpg"
+                                    />
                                 </a>
                                 <div class="label-top-sub shadow-sm">
                                     <a class="text-white">SALE</a>
                                 </div>
                                 <div class="card-body-sub">
                                     <div class="clearfix mb-3">
+                        <span
+                                class="float-start badge rounded-pill bg-success"
+                                style="text-decoration: line-through"
+                        >150$</span
+                        >
                                         <span class="float-start badge rounded-pill bg-success"
-                                              style="text-decoration: line-through;">150$</span>
-                                        <span class="float-start badge rounded-pill bg-success">130$</span>
-                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link"
-                                                                   href="#">reviews</a></span>
+                                        >130$</span
+                                        >
+                                        <span class="float-end"
+                                        ><a
+                                                class="small text-muted text-uppercase aff-link"
+                                                href="#"
+                                        >reviews</a
+                                        ></span
+                                        >
                                     </div>
                                     <h5 class="card-title-sub">
                                         <a href="#" target="_blank">Gain Weight Plan</a>
                                     </h5>
                                     <div class="d-grid gap-2 my-4">
-                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#">add to cart</a>
+                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#"
+                                        >add to cart</a
+                                        >
                                     </div>
                                     <div class="clearfix mb-1">
-                                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+                        <span class="float-start"
+                        ><a href="#"><i class="fas fa-question-circle"></i></a
+                        ></span>
                                         <span class="float-end">
-                                          <i class="far fa-heart" style="cursor: pointer"></i>
-                                        </span>
+                          <i class="far fa-heart" style="cursor: pointer"></i>
+                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -116,27 +136,40 @@
                         <div class="col hp">
                             <div class="card-sub h-100 shadow-sm">
                                 <a href="#">
-                                    <img alt="product.title"
-                                         class="card-img-top-sub"
-                                         src="https://i.pinimg.com/originals/25/8d/d6/258dd6a242b6ef919cb416bbc550e939.jpg"/>
+                                    <img
+                                            alt="product.title"
+                                            class="card-img-top-sub"
+                                            src="https://i.pinimg.com/originals/25/8d/d6/258dd6a242b6ef919cb416bbc550e939.jpg"
+                                    />
                                 </a>
                                 <div class="card-body-sub">
                                     <div class="clearfix mb-3">
-                                        <span class="float-start badge rounded-pill bg-success">200$</span>
-                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link"
-                                                                   href="#">reviews</a></span>
+                        <span class="float-start badge rounded-pill bg-success"
+                        >200$</span
+                        >
+                                        <span class="float-end"
+                                        ><a
+                                                class="small text-muted text-uppercase aff-link"
+                                                href="#"
+                                        >reviews</a
+                                        ></span
+                                        >
                                     </div>
                                     <h5 class="card-title-sub">
                                         <a href="#" target="_blank">Custom Meal Plan</a>
                                     </h5>
                                     <div class="d-grid gap-2 my-4">
-                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#">add to cart</a>
+                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#"
+                                        >add to cart</a
+                                        >
                                     </div>
                                     <div class="clearfix mb-1">
-                                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+                        <span class="float-start"
+                        ><a href="#"><i class="fas fa-question-circle"></i></a
+                        ></span>
                                         <span class="float-end">
-                                         <i class="far fa-heart" style="cursor: pointer"></i>
-                                        </span>
+                          <i class="far fa-heart" style="cursor: pointer"></i>
+                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -144,27 +177,42 @@
                         <div class="col hp">
                             <div class="card-sub h-100 shadow-sm">
                                 <a href="#">
-                                    <img alt="product.title"
-                                         class="card-img-top-sub"
-                                         src="https://i.pinimg.com/originals/a3/e3/9c/a3e39c176fcddc51bdca84e58ddb6a11.jpg"/>
+                                    <img
+                                            alt="product.title"
+                                            class="card-img-top-sub"
+                                            src="https://i.pinimg.com/originals/a3/e3/9c/a3e39c176fcddc51bdca84e58ddb6a11.jpg"
+                                    />
                                 </a>
                                 <div class="card-body-sub">
                                     <div class="clearfix mb-3">
-                                        <span class="float-start badge rounded-pill bg-success">180$</span>
-                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link"
-                                                                   href="#">reviews</a></span>
+                        <span class="float-start badge rounded-pill bg-success"
+                        >180$</span
+                        >
+                                        <span class="float-end"
+                                        ><a
+                                                class="small text-muted text-uppercase aff-link"
+                                                href="#"
+                                        >reviews</a
+                                        ></span
+                                        >
                                     </div>
                                     <h5 class="card-title-sub">
-                                        <a href="#" target="_blank">The 30-Day Women's Transformation Stack</a>
+                                        <a href="#" target="_blank"
+                                        >The 30-Day Women's Transformation Stack</a
+                                        >
                                     </h5>
                                     <div class="d-grid gap-2 my-4">
-                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#">add to cart</a>
+                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#"
+                                        >add to cart</a
+                                        >
                                     </div>
                                     <div class="clearfix mb-1">
-                                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+                        <span class="float-start"
+                        ><a href="#"><i class="fas fa-question-circle"></i></a
+                        ></span>
                                         <span class="float-end">
-                                          <i class="far fa-heart" style="cursor: pointer"></i>
-                                        </span>
+                          <i class="far fa-heart" style="cursor: pointer"></i>
+                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -172,32 +220,51 @@
                         <div class="col hp">
                             <div class="card-sub h-100 shadow-sm">
                                 <a href="#">
-                                    <img alt="product.title"
-                                         class="card-img-top-sub"
-                                         src="https://i.pinimg.com/originals/e9/bd/24/e9bd248f02d51c087314d60274b33cdb.jpg"/>
+                                    <img
+                                            alt="product.title"
+                                            class="card-img-top-sub"
+                                            src="https://i.pinimg.com/originals/e9/bd/24/e9bd248f02d51c087314d60274b33cdb.jpg"
+                                    />
                                 </a>
                                 <div class="label-top-sub shadow-sm">
                                     <a class="text-white">SALE</a>
                                 </div>
                                 <div class="card-body-sub">
                                     <div class="clearfix mb-3">
-                                        <span class="float-start badge rounded-pill bg-success"
-                                              style="text-decoration: line-through"> 180$</span>
-                                        <span class="float-start badge rounded-pill bg-success"> 150$</span>
-                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link"
-                                                                   href="#">reviews</a></span>
+                        <span
+                                class="float-start badge rounded-pill bg-success"
+                                style="text-decoration: line-through"
+                        >
+                          180$</span
+                        >
+                                        <span class="float-start badge rounded-pill bg-success">
+                          150$</span
+                                        >
+                                        <span class="float-end"
+                                        ><a
+                                                class="small text-muted text-uppercase aff-link"
+                                                href="#"
+                                        >reviews</a
+                                        ></span
+                                        >
                                     </div>
                                     <h5 class="card-title-sub">
-                                        <a href="#" target="_blank">The 30-Day Men's Transformation Stack</a>
+                                        <a href="#" target="_blank"
+                                        >The 30-Day Men's Transformation Stack</a
+                                        >
                                     </h5>
                                     <div class="d-grid gap-2 my-4">
-                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#">add to cart</a>
+                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#"
+                                        >add to cart</a
+                                        >
                                     </div>
                                     <div class="clearfix mb-1">
-                                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+                        <span class="float-start"
+                        ><a href="#"><i class="fas fa-question-circle"></i></a
+                        ></span>
                                         <span class="float-end">
-                                           <i class="far fa-heart" style="cursor: pointer"></i>
-                                        </span>
+                          <i class="far fa-heart" style="cursor: pointer"></i>
+                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -207,10 +274,13 @@
             </div>
         </div>
     </div>
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css' rel='stylesheet'>
-    <link href="../Abonimi/abonimi.css" rel="stylesheet" type="text/css">
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css"
+            rel="stylesheet"
+    />
+    <link href="../Abonimi/abonimi.css" rel="stylesheet" type="text/css" />
 </div>
-<hr>
+<hr />
 <footer class="detailed-footer">
     <div class="footer-info">
         <h3>Contact Information</h3>
@@ -230,6 +300,6 @@
         <p>&copy; 2024 DietShop. All Rights Reserved.</p>
     </div>
 </footer>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
 </body>
 </html>
