--- a/aboutAs/aboutAs.html
+++ b/aboutAs/aboutAs.html
@@ -22,21 +22,22 @@
 </nav>
 <div class="about-content wide">
     <h2>Our Story</h2>
-    <p>Welcome to DietShop, where our journey began with a simple idea: to provide individuals with the tools and
-        resources to lead healthier lives through proper nutrition and catering services.</p>
-    <p>Our story started in a small kitchen, where our founder, passionate about nutrition and wellness, began crafting
-        personalized nutrition plans for friends and family. As the demand for our services grew, so did our vision.</p>
-    <p>Today, DietShop stands as a testament to our commitment to excellence in nutrition and catering. We believe in
-        delivering not just meals, but experiences that nourish the body and soul.</p>
-    <p>Our mission is to empower individuals to make informed choices about their health and wellness by providing
-        access to delicious, nutritious meals and personalized support every step of the way.</p>
-    <p>At DietShop, we envision a future where everyone has the opportunity to thrive and live their best lives through
-        the power of healthy eating.</p>
+    <p>Mirë se vini në DietShop, një destinacion ku udhëtimi ynë fillon me një ide të thjeshtë:
+         të ofrojmë individëve mjetet dhe burimet për të bërë jetë më të shëndetshme nëpërmjet të 
+         ushqyerit të duhur. </p>
+    <p>DietShop qëndron si një testament i përkushtimit tonë për përsosmëri në ushqim dhe ushqim. 
+        Ne besojmë në duke ofruar jo vetëm vakte, por përvoja që ushqejnë trupin dhe shpirtin. </p>
+    <p>Misioni ynë është të fuqizojmë individët që të bëjnë zgjedhje të informuara për shëndetin 
+        dhe mirëqenien e tyre duke ofruar qasje në vakte të shijshme, ushqyese dhe 
+        mbështetje të personalizuar në çdo hap të rrugës. </p>
+    <p>Në DietShop, ne parashikojmë një të ardhme ku të gjithë kanë mundësinë 
+        të lulëzojnë dhe të jetojnë jetën e tyre më të mirë fuqia e të ushqyerit të shëndetshëm.</p>
+
 </div>
 <header>
     <div class="header-content">
         <span>company management</span>
-        <h1>Meet a team of experts and innovators who are pioneers in their field</h1>
+        <h1>Njihuni me ekipin tone te profesionisteve.</h1>
     </div>
 </header>
 <section>
@@ -67,33 +68,35 @@
     <div class="testimonial-carousel">
         <div class="testimonials-container">
             <div class="testimonial">
-                <p>"DietShop has transformed my life! Their nutrition plans are delicious and easy to follow. "</p>
-                <p class="testimonial-author">- Emily Johnson</p>
+                <p>"DietShop ka transformuar jetën time! Planet e tyre të të ushqyerit janë të shijshme <br>dhe të lehta për t'u ndjekur."</p>
+                <p class="testimonial-author">- Megi Grenazi</p>
             </div>
             <div class="testimonial">
-                <p>"I highly recommend DietShop to anyone looking to improve their health and wellness.
-                    <br>The catering service is exceptional! &lt;3"</p>
-                <p class="testimonial-author">- Mark Davis</p>
+                <p>"Unë rekomandoj shumë DietShop për këdo që kërkon të
+                    përmirësojë shëndetin dhe <br>mirëqenien e tyre. Shërbimi i kateringut është i jashtëzakonshëm"</p>
+                <p class="testimonial-author">- Grasjela Celaj</p>
             </div>
             <div class="testimonial">
-                <p>"lorem"</p>
-                <p class="testimonial-author">- Mark Davis</p>
+                <p>"Diet Shop është burimi im i parë për këshilla të shëndetshme dhe ushqime cilësore."
+                    </p>
+                <p class="testimonial-author">- Elda Halili</p>
             </div>
             <div class="testimonial">
-                <p>"lorem"</p>
-                <p class="testimonial-author">- grasjelaaa Davis</p>
+                <p>"Jam e kënaqur me këshillat e mrekullueshme që marr në Diet Shop"
+                    </p>
+                <p class="testimonial-author">- Kisi Guri</p>
             </div>
             <div class="testimonial">
-                <p>"lorem"</p>
-                <p class="testimonial-author">- megiii Davis</p>
+                <p>"Rekomandoj Diet Shop për çdo person që dëshiron të mbajë një stil jetese të shëndetshëm."</p>
+                <p class="testimonial-author">- Arbri Allko</p>
             </div>
             <div class="testimonial">
-                <p>"lorem"</p>
-                <p class="testimonial-author">- kisiiiiiii Davis</p>
+                <p>"Një burim i vyer për udhëzime dhe informacione të besueshme"</p>
+                <p class="testimonial-author">- Kisi Guri</p>
             </div>
             <div class="testimonial">
-                <p>"lorem"</p>
-                <p class="testimonial-author">- eldaaa Davis</p>
+                <p>"Faleminderit per këshillat e vlefshme për të mbajtur një dietë të balancuar."</p>
+                <p class="testimonial-author">- Megi Grenazi</p>
             </div>
             <!-- Add more testimonials here -->
         </div>
