--- a/homePage/index.html
+++ b/homePage/index.html
@@ -18,11 +18,10 @@
             <a href="#">Menu</a>
             <div class="dropdown-content">
                 <!-- Elementet e dropdown menu për 'Menu' -->
-                <a href="../Nutricion/border.html">nutricione</a>
-                <a href="../semundjet/1.html">Semundje</a>
-                <a href="../catering/">Item 3</a>
-                <a href="#">Item 4</a>
-                <a href="#">Item 5</a>
+                <a href="../Nutricion/border.html">Nutricione</a>
+                <a href="../semundjet/1.html">Dieta</a>
+                <a href="../catering/catering.html">Kateringu</a>
+                
             </div>
         </li>
         <li><a href="../contact/contact.html">Contact Us</a></li>
