--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -6,7 +6,8 @@
   <title>Dieta ne baze te semundjeve</title>
   <!-- Connect your CSS file here -->
   <link rel="stylesheet" href="css.css">
-  <link rel="stylesheet" href="../common/navbar-footer.css"> <!--Lidhja e skedarit te stilizimit te perbashket te footerit dhe nav-->
+  <link href="../common/navbar-footer.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet"> <!--Lidhja e skedarit te stilizimit te perbashket te footerit dhe nav-->
 </head>
 <body>
   <!--nav-->
