--- a/contact/contact.html
+++ b/contact/contact.html
@@ -28,7 +28,15 @@
     <ul id="navcontent">
         <li><a href="../homePage/index.html">Home</a></li>
         <li><a href="../aboutAs/aboutAs.html">About</a></li>
-        <li><a href="#">Menu</a></li>
+        <li><a href="#">Menu</a>
+            <div class="dropdown-content">
+                <!-- Elementet e dropdown menu për 'Menu' -->
+                <a href="../Nutricion/border.html">Nutricione</a>
+                <a href="../semundjet/1.html">Dieta</a>
+                <a href="../catering/catering.html">Katering</a>
+              </div>
+        </li>
+    </li>
         <li><a href="../contact/contact.html">Contact Us</a></li>
     </ul>
 
