--- a/homePage/index.html
+++ b/homePage/index.html
@@ -80,7 +80,7 @@
         </button>
       </div>
     </div>
-   <!----> <script>
+    <script>
       function goToSemundjet() {
         console.log("u shtip");
         window.location.href = "../semundjet/1.html";
