--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -443,6 +443,7 @@
 </section>
 <hr>
 </body>
+<!--footeri-->
 <footer class="detailed-footer">
   <div class="footer-info">
       <h3>Contact Information</h3>
@@ -462,5 +463,5 @@
       <p>&copy; 2024 DietShop. All Rights Reserved.</p>
   </div>
 </footer>
-<script src="js.js"></script>
+<script src="js.js"></script> <!--lidhja e javascript me html-->
 </html>
