--- a/contact/contact.html
+++ b/contact/contact.html
@@ -69,7 +69,7 @@
             <input id="pho" name="myPhone" placeholder="Enter your Phone no" type="tel">
         </div>
         <div id="radio">
-            Are you a member of OnlineFoodShop:
+            Are you a member of DietShop:
             Yes <input name="eligible" type="radio" value="Yes">
             No <input name="eligible" type="radio" value="No">
         </div>
